--- a/src/components/Blog/Comments/Comment/Comment.scss
+++ b/src/components/Blog/Comments/Comment/Comment.scss
@@ -99,7 +99,7 @@
     color: $primary;
     padding: 2px;
     font-size: 14px;
-    font-style: italic;
+    //font-style: italic;
     border-bottom: 1px solid $primary;
     resize: none;
     width: 540px;
