--- a/src/containers/Directory/Directory.scss
+++ b/src/containers/Directory/Directory.scss
@@ -5,11 +5,21 @@
     flex-direction: column;
     padding: 10px;
     align-items: center;
+    height: calc(100vh - 80px);
+    overflow-y: scroll;
+    scrollbar-width: none;
 
 }
 
+.sectionContainer{
+    flex: 1;
+    margin-top: 10px;
+}
+
 .header{
-    font-size: 30px;
+    font-size: 40px;
     font-weight: bold;
     color: $secondary;
+    margin: 20px;
+    text-align: center;
 }
