Restructured Confirmation to remove post relience on submit press. Added subscriber to posts. Images are working up until failed response from server

--- a/src/components/Blog/BlogPost/BlogPost.scss
+++ b/src/components/Blog/BlogPost/BlogPost.scss
@@ -28,7 +28,7 @@
 .userPostContainer{
     flex: 3;
     //min-height: 400px;
-    min-width: 600px;
+    width: 600px;
     display: flex;
     flex-direction: column;
     //border-right: 1px solid $primary;
