--- a/src/components/Blog/BlogPost/Gallery/image-gallery.css
+++ b/src/components/Blog/BlogPost/Gallery/image-gallery.css
@@ -17,6 +17,41 @@
   font-weight: normal;
   font-style: normal; }
 
+
+
+
+/*My edits*/
+.image-gallery-thumbnail img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+ }
+ .image-gallery-thumbnail .image-gallery-thumbnail-inner {
+  height: 100px;
+  overflow: hidden;
+  position: relative; 
+}
+
+.image-gallery-image {
+    height: 400px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .image-gallery-slide img {
+    width: 100%;
+    object-fit: contain;
+    height: 100%;
+   }
+
+   .image-gallery-slide-wrapper {
+    position: relative; 
+    height: 340px;
+  }
+
+  /*******/
+
+
 .image-gallery-fullscreen-button::before,
 .image-gallery-play-button::before,
 .image-gallery-left-nav::before,
@@ -63,8 +98,7 @@
     .image-gallery-content.fullscreen .image-gallery-slide {
       background: #000; }
 
-.image-gallery-slide-wrapper {
-  position: relative; }
+
   .image-gallery-slide-wrapper.left, .image-gallery-slide-wrapper.right {
     display: inline-block;
     width: calc(100% - 113px); }
@@ -179,11 +213,7 @@
   .image-gallery-right-nav::before {
     content: ""; }
 
-.image-gallery-slides {
-  line-height: 0;
-  overflow: hidden;
-  position: relative;
-  white-space: nowrap; }
+
 
 .image-gallery-slide {
   background: #fff;
@@ -193,8 +223,7 @@
   width: 100%; }
   .image-gallery-slide.center {
     position: relative; }
-  .image-gallery-slide img {
-    width: 100%; }
+ 
   .image-gallery-slide .image-gallery-description {
     background: rgba(0, 0, 0, 0.4);
     bottom: 70px;
@@ -278,7 +307,7 @@
       .image-gallery-thumbnails-wrapper.right {
         margin-left: 3px; } }
 
-.image-gallery-thumbnails {
+:local(.image-gallery-thumbnails) {
   overflow: hidden;
   padding: 5px 0; }
   @media (max-width: 768px) {
@@ -301,11 +330,8 @@
       width: 75px; } }
   .image-gallery-thumbnail + .image-gallery-thumbnail {
     margin-left: 2px; }
-  .image-gallery-thumbnail .image-gallery-thumbnail-inner {
-    position: relative; }
-  .image-gallery-thumbnail img {
-    vertical-align: middle;
-    width: 100%; }
+
+ 
   .image-gallery-thumbnail.active {
     border: 4px solid #337ab7; }
     @media (max-width: 768px) {
