--- a/src/components/UI/Update/Posts/ImageUpload/ImageUpload.scss
+++ b/src/components/UI/Update/Posts/ImageUpload/ImageUpload.scss
@@ -1,3 +1,5 @@
+@import '../../../../../constants/theme';
+
 .container{
     width: 150px;
     height: 150px;
@@ -14,4 +16,15 @@
 
 input[type="file"] {
     display: none;
+}
+
+.deleteButton{
+    color: $primary;
+    height: 26px;
+    width: 26px;
+    border-radius: 13px;
+    text-align: center;
+    background-color: $secondary;
+    position: absolute;
+    margin-left: 130px;
 }
