--- a/src/components/Directory/DirUser/DirUser.scss
+++ b/src/components/Directory/DirUser/DirUser.scss
@@ -23,8 +23,10 @@
 
 .badgeContainer{
     position: absolute;
-    margin-top: 220px;
-    padding: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    display: flex;
+    flex-flow: row wrap;
 }
 
 .dataContainer{
